SSCSFT-25 UC WCA Journey - Start date
Refactor code