@@ -1,10 +1,9 @@
 package uk.gov.hmcts.reform.sscs.ccd.presubmit.writefinaldecision.uc.scenarios;
 
-import static java.time.LocalDate.now;
 import static java.util.Collections.singletonList;
 import static org.assertj.core.api.Assertions.assertThat;
-import static uk.gov.hmcts.reform.sscs.util.DateUtilities.today;
 
+import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.Test;
@@ -17,30 +16,27 @@ public class UcScenario12Test {
     @Test
     public void testScenario12() {
 
-        List<Descriptor> schedule6Descriptors =
-            singletonList(Descriptor.builder()
-                              .activityQuestionValue("Mobilising Unaided")
-                              .activityAnswerValue("1")
-                              .activityAnswerLetter("c").activityAnswerPoints(9).build());
+        List<Descriptor> schedule6Descriptors = singletonList(
+            Descriptor.builder().activityQuestionValue("Mobilising Unaided").activityAnswerValue("1").activityAnswerLetter("c").activityAnswerPoints(9).build());
 
-        WriteFinalDecisionTemplateBody body =
-            WriteFinalDecisionTemplateBody.builder()
-                .hearingType("faceToFace")
-                .attendedHearing(true)
-                .presentingOfficerAttended(true)
-                .isAllowed(true)
-                .isSetAside(true)
-                .dateOfDecision("2020-09-20")
-                .ucNumberOfPoints(9)
-                .pageNumber("A1")
-                .appellantName("Felix Sydney")
-                .reasonsForDecision(Arrays.asList("My first reasons", "My second reasons"))
-                .anythingElse("Something else")
-                .schedule8Paragraph4Applicable(true)
-                .schedule9Paragraph4Applicable(true)
-                .dwpReassessTheAward("noRecommendation")
-                .ucCapabilityAssessmentStartDate(now())
-                .ucSchedule6Descriptors(schedule6Descriptors).build();
+        WriteFinalDecisionTemplateBody body = WriteFinalDecisionTemplateBody.builder()
+            .hearingType("faceToFace")
+            .attendedHearing(true)
+            .presentingOfficerAttended(true)
+            .isAllowed(true)
+            .isSetAside(true)
+            .dateOfDecision("2020-09-20")
+            .ucNumberOfPoints(9)
+            .pageNumber("A1")
+            .appellantName("Felix Sydney")
+            .reasonsForDecision(Arrays.asList("My first reasons", "My second reasons"))
+            .anythingElse("Something else")
+            .schedule8Paragraph4Applicable(true)
+            .schedule9Paragraph4Applicable(true)
+            .dwpReassessTheAward("noRecommendation")
+            .ucCapabilityAssessmentStartDate(LocalDate.of(2025, 11, 18))
+            .ucSchedule6Descriptors(schedule6Descriptors)
+            .build();
 
         UcTemplateContent content = UcScenario.SCENARIO_12.getContent(body);
 
@@ -49,7 +45,7 @@ public class UcScenario12Test {
             
             The decision made by the Secretary of State on 20/09/2020 is set aside.
             
-            Felix Sydney has limited capability for work and is to be treated as having limited capability for work-related activity from %s.
+            Felix Sydney has limited capability for work and is to be treated as having limited capability for work-related activity from 18/11/2025.
             
             In applying the Work Capability Assessment 9 points were scored from the activities and descriptors in Schedule 6 of the Universal Credit (UC) Regulations 2013 made up as follows:
             
@@ -70,7 +66,7 @@ public class UcScenario12Test {
             
             Any recommendation given below does not form part of the Tribunal's decision and is not binding on the Secretary of State. The Tribunal makes no recommendation as to when the Department should reassess Felix Sydney.
             
-            """.formatted(today());
+            """;
 
         assertThat(content.getComponents()).hasSize(12);
 
@@ -80,26 +76,26 @@ public class UcScenario12Test {
     @Test
     public void testScenario12WhenNoSchedule6() {
 
-        List<Descriptor> schedule6Descriptors = Arrays.asList();
+        List<Descriptor> schedule6Descriptors = List.of();
 
-        WriteFinalDecisionTemplateBody body =
-            WriteFinalDecisionTemplateBody.builder()
-                .hearingType("faceToFace")
-                .attendedHearing(true)
-                .presentingOfficerAttended(true)
-                .isAllowed(true)
-                .isSetAside(true)
-                .dateOfDecision("2020-09-20")
-                .ucNumberOfPoints(0)
-                .pageNumber("A1")
-                .appellantName("Felix Sydney")
-                .reasonsForDecision(Arrays.asList("My first reasons", "My second reasons"))
-                .anythingElse("Something else")
-                .schedule8Paragraph4Applicable(true)
-                .schedule9Paragraph4Applicable(true)
-                .dwpReassessTheAward("noRecommendation")
-                .ucCapabilityAssessmentStartDate(now())
-                .ucSchedule6Descriptors(schedule6Descriptors).build();
+        WriteFinalDecisionTemplateBody body = WriteFinalDecisionTemplateBody.builder()
+            .hearingType("faceToFace")
+            .attendedHearing(true)
+            .presentingOfficerAttended(true)
+            .isAllowed(true)
+            .isSetAside(true)
+            .dateOfDecision("2020-09-20")
+            .ucNumberOfPoints(0)
+            .pageNumber("A1")
+            .appellantName("Felix Sydney")
+            .reasonsForDecision(Arrays.asList("My first reasons", "My second reasons"))
+            .anythingElse("Something else")
+            .schedule8Paragraph4Applicable(true)
+            .schedule9Paragraph4Applicable(true)
+            .dwpReassessTheAward("noRecommendation")
+            .ucCapabilityAssessmentStartDate(LocalDate.of(2025, 11, 18))
+            .ucSchedule6Descriptors(schedule6Descriptors)
+            .build();
 
         UcTemplateContent content = UcScenario.SCENARIO_12.getContent(body);
 
@@ -108,7 +104,7 @@ public class UcScenario12Test {
             
             The decision made by the Secretary of State on 20/09/2020 is set aside.
             
-            Felix Sydney has limited capability for work and is to be treated as having limited capability for work-related activity from %s.
+            Felix Sydney has limited capability for work and is to be treated as having limited capability for work-related activity from 18/11/2025.
             
             In applying the Work Capability Assessment 0 points were scored from the activities and descriptors in Schedule 6 of the Universal Credit (UC) Regulations 2013.
             
@@ -126,7 +122,7 @@ public class UcScenario12Test {
             
             Any recommendation given below does not form part of the Tribunal's decision and is not binding on the Secretary of State. The Tribunal makes no recommendation as to when the Department should reassess Felix Sydney.
             
-            """.formatted(today());
+            """;
 
         assertThat(content.getComponents()).hasSize(11);
 
